--- a/easy-game/src/index.html
+++ b/easy-game/src/index.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="UTF-8" />
 <title>The World's Easiest Game</title>
-<script src="lib/phaser.min.js"></script>
 <style type="text/css">
   body {
       margin: 0;
@@ -14,7 +13,6 @@
 </style>
 </head>
 <body>
-<script src="app/app.js"></script>
-
+<script src="/assets/bundle.js"></script>
 </body>
 </html>
